--- a/ClimaTICO/app/src/main/res/layout/activity_search_city.xml
+++ b/ClimaTICO/app/src/main/res/layout/activity_search_city.xml
@@ -33,6 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
+        android:layout_marginBottom="100dp"
         android:text="Previsão"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
