--- a/ClimaTICO/app/src/main/res/layout/activity_splash_screen.xml
+++ b/ClimaTICO/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SplashScreenActivity">
+    tools:context=".SplashScreenActivity"
+    android:background="@color/blue">
 
     <ImageView
         android:layout_width="match_parent"
