--- a/ClimaTICO/app/src/main/res/values/themes.xml
+++ b/ClimaTICO/app/src/main/res/values/themes.xml
@@ -3,6 +3,7 @@
     <style name="Base.Theme.ClimaTICO" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:textColor">#000000</item>
     </style>
 
     <style name="Theme.ClimaTICO" parent="Base.Theme.ClimaTICO" />
