--- a/ClimaTICO/app/src/main/res/values/colors.xml
+++ b/ClimaTICO/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="blue">#5E5EC7</color>
+    <color name="blue">#588AFF</color>
     <color name="light_grey">#B1B1B1</color>
 </resources>
