--- a/ClimaTICO/app/src/main/res/layout/activity_splash_screen.xml
+++ b/ClimaTICO/app/src/main/res/layout/activity_splash_screen.xml
@@ -16,5 +16,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:paddingHorizontal="24dp"></ImageView>
+        android:paddingHorizontal="24dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
