--- a/ClimaTICO/app/src/main/res/layout/activity_relatory.xml
+++ b/ClimaTICO/app/src/main/res/layout/activity_relatory.xml
@@ -40,65 +40,80 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_nome_da_cidade" />
 
-        <TextView
-            android:id="@+id/tv_temperatura_e_aparencia"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:text="XXCº, aparencia"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/bg_container_rounded"
+            android:orientation="vertical"
+            android:paddingHorizontal="50dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_sigla_estado" />
+            app:layout_constraintTop_toBottomOf="@+id/iv_sigla_estado">
 
-        <TextView
-            android:id="@+id/tv_temperatura_maxima"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Temperatura máxima: XX ºC"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_temperatura_e_aparencia" />
+            <TextView
+                android:id="@+id/tv_temperatura_e_aparencia"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="XXCº, aparencia"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_gravity="center"
+                app:layout_constraintTop_toBottomOf="@+id/iv_sigla_estado" />
 
-        <TextView
-            android:id="@+id/tv_temperatura_minima"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Temperatura mínima: XX ºC"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_temperatura_maxima" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/black"
+                android:layout_marginVertical="10dp"/>
 
-        <TextView
-            android:id="@+id/tv_sensacao_termica"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Sensação térmica: XX ºC"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_temperatura_minima" />
+            <TextView
+                android:id="@+id/tv_temperatura_maxima"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Temperatura máxima: XX ºC"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_temperatura_e_aparencia" />
 
-        <TextView
-            android:id="@+id/tv_velocidade_vento"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="Velocidade do vento: XX km/h"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_sensacao_termica" />
+            <TextView
+                android:id="@+id/tv_temperatura_minima"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Temperatura mínima: XX ºC"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_temperatura_maxima" />
 
-        <TextView
-            android:id="@+id/tv_humidade"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="Umidade: XX%"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_velocidade_vento" />
+            <TextView
+                android:id="@+id/tv_sensacao_termica"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sensação térmica: XX ºC"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_temperatura_minima" />
+
+            <TextView
+                android:id="@+id/tv_velocidade_vento"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Velocidade do vento: XX km/h"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_sensacao_termica" />
+
+            <TextView
+                android:id="@+id/tv_humidade"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Umidade: XX%"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_velocidade_vento" />
+
+        </LinearLayout>
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
