--- a/ClimaTICO/app/src/main/res/values/themes.xml
+++ b/ClimaTICO/app/src/main/res/values/themes.xml
@@ -4,6 +4,7 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="android:textColor">#000000</item>
+        <item name="colorPrimary">#1A2254</item>
     </style>
 
     <style name="Theme.ClimaTICO" parent="Base.Theme.ClimaTICO" />
